2005-07-21  Albert Chu  <chu11@llnl.gov>

	* Fix various metric controller bugs.

	* Complete cerebro-admin.
	
2005-07-20  Albert Chu  <chu11@llnl.gov>

	* Added metric_util lib to clean up code and fix corner cases.

	* Began cerebro-admin.

2005-07-18  Albert Chu  <chu11@llnl.gov>

	* Added additional protocol corner case checks.

	* Fixed string length == 0 corner case problem.

	* Cleaned up some autoconf macros.

	* Added and use configurable SLURM_STATE_CONTROL_PATH.

	* Autoconfed CEREBRO_METRIC_CONTROL_PATH

	* Add metric controller API manpages.

	* Fixed metric max corner case bug.

2005-07-15  Albert Chu  <chu11@llnl.gov>

	* Fixed metric controller bugs.

	* Fixed null packet string bugs.

	* Added metric restart capability.
	
2005-07-12  Albert Chu  <chu11@llnl.gov>

	* Finished initial work on cerebrod metric controller.

	* Added libcerebro metric control API.
	
2005-07-11  Albert Chu  <chu11@llnl.gov>

	* Cleanup cerebrod_speaker_data.[ch] in preparation for metric
	control code.

	* Begin development of metric controller.

	* Fixed potential fd leak in socket reinitialization routines.

	* Fix some buffer overflow bugs.
	
2005-07-08  Albert Chu  <chu11@llnl.gov>

	* Re-named 'metric_protocol' to 'metric_server_protocol' globally
	in preparation of new features being added in.

	* tagged pre-metric-server-protocol-rework-1

	* re-worked cerebrod for metric server protocol change

	* tagged pre-metric-server-protocol-rework-1-a

	* re-worked cerebro lib for metric server protocol change

	* tagged post-metric-server-protocol-rework-1

	* tagged pre-metric-control-protocol-1

	* src/libs/include/cerebro/cerebro_metric_control_protocol.h: New
	file.
	
2005-07-07  Albert Chu  <chu11@llnl.gov>

	* Completed cerebro-stat tool.

	* Added hostlist wrappers.

	* Added cerebro-stat manpage.

	* cerebro.spec.in: Updated.

	* Fix pthread creation bugs.

	* tagged cerebro-1-0-0-pre4
	
2005-07-06  Albert Chu  <chu11@llnl.gov>
