@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.27 2005-07-19 00:16:12 achu Exp $
+## $Id: Makefile.am,v 1.28 2005-07-21 20:15:45 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -29,7 +29,7 @@ man3_MANS  = libcerebro.3 \
 	     cerebro_register_metric.3 \
 	     cerebro_unregister_metric.3 \
 	     cerebro_update_metric_value.3 \
-	     cerebro_restart_metric.3 \
+	     cerebro_resend_metric.3 \
 	     cerebro_metriclist_length.3 \
 	     cerebro_metriclist_destroy.3 \
 	     cerebro_metriclist_iterator_create.3 \
@@ -80,7 +80,7 @@ EXTRA_DIST = cerebro.1 \
 	     cerebro_register_metric.3 \
 	     cerebro_unregister_metric.3 \
 	     cerebro_update_metric_value.3 \
-	     cerebro_restart_metric.3 \
+	     cerebro_resend_metric.3 \
 	     cerebro_metriclist_length.3 \
 	     cerebro_metriclist_destroy.3 \
 	     cerebro_metriclist_iterator_create.3 \
