@@ -1,4 +1,4 @@
 \."#############################################################################
-\."$Id: cerebro_restart_metric.3,v 1.1 2005-07-19 00:16:12 achu Exp $
+\."$Id: cerebro_resend_metric.3,v 1.1 2005-07-21 20:15:45 achu Exp $
 \."#############################################################################
 .so man3/cerebro_register_metric.3
