@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro-admin.c,v 1.3 2005-07-21 16:57:54 achu Exp $
+ *  $Id: cerebro-admin.c,v 1.4 2005-07-21 20:15:45 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -31,7 +31,7 @@
 #define CEREBRO_ADMIN_REGISTER    0
 #define CEREBRO_ADMIN_UNREGISTER  1
 #define CEREBRO_ADMIN_UPDATE      2
-#define CEREBRO_ADMIN_RESTART     3
+#define CEREBRO_ADMIN_RESEND      3
 
 /* 
  * External variables for getopt 
@@ -98,7 +98,7 @@ _usage(void)
           "  -r         Register a new metric\n"
           "  -u         Unregister a new metric\n"
           "  -p         Update a metric's value\n"
-          "  -s         Restart a metric\n"
+          "  -s         Resend a metric\n"
           "  -t INT     Specify metric type\n"
           "     %d - none (default)\n"
           "     %d - int32\n"
@@ -156,7 +156,7 @@ _cmdline_parse(int argc, char **argv)
       {"register",          0, NULL, 'r'},
       {"unregister",        0, NULL, 'u'},
       {"update",            0, NULL, 'p'},
-      {"restart",           0, NULL, 's'},
+      {"resend",            0, NULL, 's'},
       {"metric-value-type", 1, NULL, 't'},
       {"metric-value",      1, NULL, 'l'},
 #if CEREBRO_DEBUG
@@ -201,7 +201,7 @@ _cmdline_parse(int argc, char **argv)
         operation = CEREBRO_ADMIN_UPDATE;
         break;
       case 's':
-        operation = CEREBRO_ADMIN_RESTART;
+        operation = CEREBRO_ADMIN_RESEND;
         break;
       case 't':
         metric_value_type = strtol(optarg, &ptr, 10);
@@ -238,7 +238,7 @@ _cmdline_parse(int argc, char **argv)
     }
   else if (metric_value_type == CEREBRO_METRIC_VALUE_TYPE_INT32)
     {
-      metric_value_int32 = strtol(metric_value, &ptr, 10);
+      metric_value_int32 = (int32_t)strtol(metric_value, &ptr, 10);
       if (ptr != (metric_value + strlen(metric_value)))
         err_exit("invalid metric value specified");
       metric_value_len = sizeof(int32_t);
@@ -328,8 +328,8 @@ main(int argc, char *argv[])
                                      metric_value_type,
                                      metric_value_len,
                                      metric_value_ptr);
-  else if (operation == CEREBRO_ADMIN_RESTART)
-    rv = cerebro_restart_metric(handle, metric_name);
+  else if (operation == CEREBRO_ADMIN_RESEND)
+    rv = cerebro_resend_metric(handle, metric_name);
   
   if (rv < 0)
     {
