@@ -1,15 +1,15 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.4 2005-07-08 23:54:37 achu Exp $
+## $Id: Makefile.am,v 1.5 2005-07-21 20:15:45 achu Exp $
 ##*****************************************************************************
 
 include_HEADERS        = cerebro.h
+noinst_HEADERS         = cerebro/cerebro_metric_server_protocol.h \
+			 cerebro/cerebro_metric_control_protocol.h \
+			 cerebro/cerebrod_heartbeat_protocol.h
 nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
 			 cerebro/cerebro_config.h \
 			 cerebro/cerebro_config_module.h \
 			 cerebro/cerebro_constants.h \
 			 cerebro/cerebro_error.h \
 			 cerebro/cerebro_metric_module.h \
-			 cerebro/cerebro_metric_server_protocol.h \
-			 cerebro/cerebro_metric_control_protocol.h \
-			 cerebro/cerebro_monitor_module.h \
-			 cerebro/cerebrod_heartbeat_protocol.h
+			 cerebro/cerebro_monitor_module.h
