@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_metric_control_protocol.h.in,v 1.2 2005-07-19 00:16:12 achu Exp $
+ *  $Id: cerebro_metric_control_protocol.h.in,v 1.3 2005-07-21 20:15:45 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBRO_METRIC_CONTROL_PROTOCOL_H
@@ -40,7 +40,7 @@
 #define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_REGISTER          0
 #define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_UNREGISTER        1
 #define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_UPDATE            2
-#define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_RESTART           3
+#define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_RESEND            3
 
 #define CEREBRO_METRIC_CONTROL_PATH  @METRIC_CONTROL_PATH@
 
